--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     .btn{display:inline-block; padding:12px 18px; background:#0a2540; color:#fff; text-decoration:none; border-radius:8px; font-weight:700;}
     .note{color:#666; font-size:13px; margin-top:10px;}
     .langbar{margin-top:10px}
-    .langbar button{padding:9px 14px; margin:4px; border:none; border-radius:7px; background:#163a66; color:#fff; font-weight:700;}
+    .langbar button{padding:9px 14px; margin:4px; border:none; border-radius:7px; background:#163a66; color:#fff; font-weight:700; cursor:pointer;}
+    .hide{display:none}
     iframe{width:100%; height:980px; border:0; border-radius:10px; margin-top:14px; background:#fff;}
     footer{text-align:center; padding:18px; color:#666; font-size:12px;}
-    .hide{display:none}
   </style>
 </head>
 <body>
@@ -63,7 +63,7 @@
     </p>
   </div>
 
-  <!-- EMBEDDED GOOGLE FORM (SAYFANIN İÇİNDE) -->
+  <!-- ✅ EMBED (SAYFANIN İÇİNDE FORM) -->
   <h2 style="margin-top:22px">Upload Invoice / Fatura Yükle</h2>
   <iframe
     src="https://docs.google.com/forms/d/e/1FAIpQLSciq-NMeKj54rH4V8AoQSDgfRVHyhXjuXVmBQwD-k2Al0tllw/viewform?embedded=true"
