--- a/index.html
+++ b/index.html
@@ -4,22 +4,211 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Invoice RiskLens | Demo</title>
+  <meta name="description" content="Invoice RiskLens demo — upload invoice via Google Form, get fraud signals + risk analysis (TR/EN)." />
+  <style>
+    :root{
+      --bg:#0b1220; --card:#111a2e; --text:#eaf0ff; --muted:#b9c2da;
+      --accent:#4c7dff; --accent2:#22c55e; --border:rgba(255,255,255,.08);
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: radial-gradient(1200px 600px at 30% -10%, rgba(76,125,255,.35), transparent 55%),
+                  radial-gradient(900px 500px at 90% 0%, rgba(34,197,94,.25), transparent 60%),
+                  var(--bg);
+      color:var(--text);
+    }
+    .wrap{max-width:980px; margin:0 auto; padding:22px}
+    .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px; flex-wrap:wrap}
+    .brand{display:flex; align-items:center; gap:10px}
+    .logo{
+      width:40px; height:40px; border-radius:12px;
+      background: linear-gradient(135deg, var(--accent), var(--accent2));
+      box-shadow: 0 10px 30px rgba(76,125,255,.25);
+    }
+    .title h1{margin:0; font-size:20px; letter-spacing:.2px}
+    .title p{margin:2px 0 0; color:var(--muted); font-size:13px}
+    .lang{
+      display:flex; align-items:center; gap:8px; background:rgba(255,255,255,.04);
+      border:1px solid var(--border); padding:8px; border-radius:14px;
+    }
+    .chip{
+      padding:8px 12px; border-radius:12px; border:1px solid transparent; cursor:pointer;
+      color:var(--muted); background:transparent; font-weight:600;
+    }
+    .chip.active{background:rgba(76,125,255,.18); border-color:rgba(76,125,255,.35); color:var(--text)}
+    .grid{display:grid; grid-template-columns:1.2fr .8fr; gap:14px; margin-top:16px}
+    @media (max-width:860px){ .grid{grid-template-columns:1fr} }
+    .card{
+      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
+      border:1px solid var(--border);
+      border-radius:18px; padding:18px;
+      box-shadow: 0 18px 60px rgba(0,0,0,.35);
+    }
+    .card h2{margin:0 0 10px; font-size:18px}
+    .card p{margin:8px 0; color:var(--muted); line-height:1.55}
+    .badges{display:flex; flex-wrap:wrap; gap:8px; margin-top:10px}
+    .badge{
+      font-size:12px; padding:6px 10px; border-radius:999px;
+      border:1px solid var(--border); color:var(--muted); background:rgba(0,0,0,.15);
+    }
+    .ctaRow{display:flex; gap:10px; flex-wrap:wrap; margin-top:12px}
+    a.btn{
+      display:inline-flex; align-items:center; justify-content:center; gap:8px;
+      padding:10px 14px; border-radius:14px; text-decoration:none; font-weight:700;
+      border:1px solid rgba(255,255,255,.10);
+      background:rgba(255,255,255,.05); color:var(--text);
+    }
+    a.btn.primary{background:rgba(76,125,255,.22); border-color:rgba(76,125,255,.35)}
+    .note{
+      margin-top:12px; padding:10px 12px; border-radius:14px;
+      border:1px dashed rgba(255,255,255,.16);
+      background: rgba(0,0,0,.18);
+      color: var(--muted); font-size:13px;
+    }
+    .iframeWrap{
+      margin-top:14px;
+      border-radius:18px;
+      overflow:hidden;
+      border:1px solid var(--border);
+      background: rgba(0,0,0,.15);
+    }
+    iframe{
+      width:100%;
+      height:980px; /* mobilde uzun, rahat */
+      border:0;
+      display:block;
+    }
+    footer{margin:18px 0 6px; color:rgba(233,240,255,.55); font-size:12px; text-align:center}
+    .mutedSmall{font-size:12px; color:rgba(233,240,255,.55)}
+  </style>
 </head>
-<body style="font-family:Arial,system-ui;margin:0;background:#f4f6f8;color:#111;">
-  <div style="max-width:900px;margin:18px auto;background:#fff;padding:18px;border-radius:10px;">
-    <h1>Invoice RiskLens</h1>
 
-    <h2>Upload Invoice / Fatura Yükle</h2>
+<body>
+  <div class="wrap">
+    <div class="topbar">
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <div class="title">
+          <h1>Invoice RiskLens — Demo</h1>
+          <p>TR / EN • Fraud signals + invoice risk scoring • Investor-ready demo</p>
+        </div>
+      </div>
 
-    <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLSciq-NMeKj54rH4V8AoQSDgfRVHyhXjuXVmBQwD-k2Al0tllw/viewform?embedded=true"
-      style="width:100%;height:980px;border:0;border-radius:10px;background:#fff;"
-      loading="lazy"
-      title="Invoice RiskLens - Upload Invoice Form"></iframe>
+      <div class="lang" role="tablist" aria-label="Language">
+        <button class="chip active" id="btnTR" type="button">TR</button>
+        <button class="chip" id="btnEN" type="button">EN</button>
+      </div>
+    </div>
 
-    <p style="color:#666;font-size:13px;margin-top:10px;">
-      Not: RiskLens para vermez/kredi vermez; bankaya/faktoringe/fona karar desteği sağlar.
-    </p>
+    <div class="grid">
+      <div class="card" id="copyTR">
+        <h2>Fatura Yükle → Dolandırıcılık & Risk Analizi Al</h2>
+        <p>
+          Bu sayfa yatırımcılar ve finans kurumları için hazırlanmış <b>demo</b> akışıdır.
+          Aşağıdaki formdan faturanızı yükleyin; RiskLens “risk skoru” ve “sahtecilik sinyallerini” üretir.
+        </p>
+        <div class="badges">
+          <span class="badge">Sahte/Naylon Fatura Sinyali</span>
+          <span class="badge">Risk Skoru</span>
+          <span class="badge">Karar Destek (API)</span>
+          <span class="badge">AML / Uyum Katmanı</span>
+        </div>
+
+        <div class="ctaRow">
+          <a class="btn primary" target="_blank" rel="noopener"
+             href="https://docs.google.com/forms/d/e/1FAIpQLSciq-NMeKj54rH4V8AoQSDgfRVHyhXjuXVmBQwD-k2Al0tllw/viewform">
+            Formu yeni sekmede aç
+          </a>
+          <a class="btn" target="_blank" rel="noopener"
+             href="https://mehmetaltas.github.io/Mehmetalta-/">
+            Cash Bridge Demo (opsiyonel)
+          </a>
+        </div>
+
+        <div class="note">
+          <b>Önemli:</b> RiskLens para vermez / kredi vermez.  
+          Banka, faktoring, fon veya katılım bankası için <b>karar destek altyapısı</b> sağlar.
+          Ödeme/finansman kararı her zaman finans kurumundadır.
+        </div>
+
+        <p class="mutedSmall" style="margin-top:10px;">
+          Not: Eğer bazı telefonlarda form görünmezse, yukarıdaki “Formu yeni sekmede aç” butonuna tıklayın.
+        </p>
+      </div>
+
+      <div class="card" id="copyEN" style="display:none;">
+        <h2>Upload Invoice → Get Fraud & Risk Analysis</h2>
+        <p>
+          This page is a <b>demo flow</b> for investors and financial institutions.
+          Upload your invoice via the form below; RiskLens generates a “risk score” and “fraud signals”.
+        </p>
+        <div class="badges">
+          <span class="badge">Fraud / Fake Invoice Signals</span>
+          <span class="badge">Risk Scoring</span>
+          <span class="badge">Decision Support (API)</span>
+          <span class="badge">AML / Compliance Layer</span>
+        </div>
+
+        <div class="ctaRow">
+          <a class="btn primary" target="_blank" rel="noopener"
+             href="https://docs.google.com/forms/d/e/1FAIpQLSciq-NMeKj54rH4V8AoQSDgfRVHyhXjuXVmBQwD-k2Al0tllw/viewform">
+            Open form in a new tab
+          </a>
+          <a class="btn" target="_blank" rel="noopener"
+             href="https://mehmetaltas.github.io/Mehmetalta-/">
+            Cash Bridge Demo (optional)
+          </a>
+        </div>
+
+        <div class="note">
+          <b>Important:</b> RiskLens does not lend money.  
+          It provides a <b>decision-support infrastructure</b> for banks, factoring firms, funds, and Islamic banks.
+          The financing decision is always made by the financial institution.
+        </div>
+
+        <p class="mutedSmall" style="margin-top:10px;">
+          Note: If the embedded form does not render on some mobile devices, use the “Open form in a new tab” button.
+        </p>
+      </div>
+    </div>
+
+    <div class="card" style="margin-top:14px;">
+      <h2>Upload Invoice / Fatura Yükle</h2>
+
+      <div class="iframeWrap">
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLSciq-NMeKj54rH4V8AoQSDgfRVHyhXjuXVmBQwD-k2Al0tllw/viewform?embedded=true"
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+
+    <footer>© 2026 Invoice RiskLens — Demo</footer>
   </div>
+
+  <script>
+    const btnTR = document.getElementById('btnTR');
+    const btnEN = document.getElementById('btnEN');
+    const copyTR = document.getElementById('copyTR');
+    const copyEN = document.getElementById('copyEN');
+
+    function setLang(lang){
+      if(lang === 'TR'){
+        btnTR.classList.add('active'); btnEN.classList.remove('active');
+        copyTR.style.display = ''; copyEN.style.display = 'none';
+        document.documentElement.lang = 'tr';
+      } else {
+        btnEN.classList.add('active'); btnTR.classList.remove('active');
+        copyEN.style.display = ''; copyTR.style.display = 'none';
+        document.documentElement.lang = 'en';
+      }
+    }
+
+    btnTR.addEventListener('click', () => setLang('TR'));
+    btnEN.addEventListener('click', () => setLang('EN'));
+  </script>
 </body>
-</html>
+  </html>
